interpreter/tests/golden-files/tables.golden.enzo
{ $name: "Alice", $age: 30 }
{ $name: "Alice", $age: 30 }
Alice
30
Bob
Bob
{ $name: "Bob", $age: 30 }
{ $foo: 42, $bar: "hello" }
hello
100
{ $foo: 100, $bar: "hello" }
{ }
{ }
error: '$someKey'
    $emptyTable.someKey;    // error: 'someKey' does not exist on this table
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
{ $inner: { $val: 42, $arr: [ 10, 20 ] } }
42
20
100
100
{ $tbl: { $a: [ 100, 200 ], $b: "x" }, $lst: [ { $foo: 1 }, { $foo: 2 } ] }
100
2
{ $first: [ 1, 2 ], $second: [ 3, 4 ] }
2
[ 3, 4 ]
{ $x: { $y: { $z: 7 } } }
7
{ $foo: 1 }
error: '$bar'
    $table9.bar;         // error: '$bar' (not found)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: index applies to lists
    $table9.1;           // error: index applies to lists
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: property access applies to tables
    $table9.foo.bar;     // error: '$bar' (not found after foo)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
999
error: property rebind applies to tables
    $prim.someKey <: 5;       // error: can't rebind to non-existent property
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
{ $a: 1 }
error: index applies to lists
    $myTbl.1;                 // error: index applies to lists
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
{ $x: 1 }
99
{ $x: 99 }
error: "'$y' not found for rebinding"
    $tbl.y <: 42;           // error: '$y' not found for rebinding
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
{ $foo: 1, $bar: 2 }
{ $foo: 1, $bar: 2 }
double comma (remove one comma).
    $badTable1: { $foo: 1,, $bar: 2 };
                          ^
leading comma (remove the comma at the start).
    $badTable2: { ,$foo: 1, $bar: 2 };
                  ^
leading comma (remove the comma at the start).
    $badTable3: { , };
                  ^
